# hostel

./: .agyignore  .commitlintrc.yml  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .sops.yaml  AUDIT.md  AUTH_AUDIT.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  Enterprise-API-Performance-&-Request-Pipeline-Audit-Prompt.md  Enterprise-Authentication-Flow-Refactor-Prompt.md  IMPLEMENT.md  PERFORMANCE-AUDIT.md  SECURITY.md  TESTING.md  docker-compose.override.yml  docker-compose.yml  push-notification-system.md
backend/: .coveragerc  .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  TESTING.md  conftest.py  docker-compose.worker.yml  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-otel.txt  requirements.txt
backend/apps/accounting/: admin.py  apps.py  coa.py  models.py  serializers.py  services.py  statements.py  urls.py  views.py
backend/apps/accounts/: admin.py  apps.py  authentication.py  cookies.py  lockout.py  models.py  serializers.py  tasks.py  tokens.py  urls.py  views.py
backend/apps/admissions/: models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/aiknowledge/: admin.py  apps.py  extraction.py  models.py  serializers.py  service_client.py  tasks.py  tests.py  (+2 more)
backend/config/: asgi.py  celery.py  otel.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/scripts/: qa_e2e.py  verify_auth_protection.py  verify_edge_security.py  verify_entitlements.py  verify_observability.py  verify_phase5.py  verify_platform_api.py
(+1244 files in other folders)
